--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -115,3 +115,25 @@
 		width: 80%;
 	}
 }
+
+/* Professional Badges Placement */
+.about-right-side {
+	position: relative;
+}
+
+.about-right-side .professional-badges-container {
+	margin-top: 30px;
+}
+
+@media (max-width: 1024px) {
+	.about-right-side .professional-badges-container {
+		margin-top: 25px;
+		max-width: 100%;
+	}
+}
+
+@media (max-width: 768px) {
+	.about-right-side .professional-badges-container {
+		margin-top: 20px;
+	}
+}
